--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,18 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
+      // console.log(window.location.hostname.includes('localhost'));
+      let url = window.location.hostname.includes("localhost")
+        ? "http://localhost:8080/api/auth/google"
+        : "https://mcc-first-rest-api.herokuapp.com/api/auth/google";
+
       function handleCredentialResponse(response) {
         // Google token:
         // console.log(response.credential);
 
         const body = { id_token: response.credential };
 
-        fetch("http://localhost:8080/api/auth/google", {
+        fetch(url, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(body),
